[package]
name = "post_app"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.38"
dotenv = "0.15.0"
eframe = "0.29.1"
futures = "0.3.31"
rand = "0.8.5"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.133"
sha2 = "0.10.8"
tokio = { version = "1.0", features = ["full"] }
url = "2.5.4"
